# AudioDec

./: pyproject.toml
models/vocoder/: HiFiGAN.py
